--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@types/react-dom": "^18.3.0",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.1.2",
     "mini-css-extract-plugin": "^2.9.0",
     "style-loader": "^4.0.0",
     "ts-node": "^10.9.2",
@@ -38,6 +40,6 @@
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
-    "copy-webpack-plugin": "^12.0.2"
+    "whatwg-fetch": "^3.6.20"
   }
 }
